exports[`coral`] = `
<div
  onClick={undefined}
  style={
    Object {
      "background": "#fff",
      "borderRadius": "1px",
      "boxShadow": "0 0 0 1px rgba(0,0,0,.1)",
      "cursor": "pointer",
      "display": "inline-block",
      "height": "20px",
      "padding": "5px",
      "width": "20px",
    }
  }>
  <div
    style={
      Object {
        "backgroundColor": "coral",
        "height": "100%",
        "width": "100%",
      }
    } />
</div>
`;

exports[`default`] = `
<div
  onClick={undefined}
  style={
    Object {
      "background": "#fff",
      "borderRadius": "1px",
      "boxShadow": "0 0 0 1px rgba(0,0,0,.1)",
      "cursor": "pointer",
      "display": "inline-block",
      "height": "20px",
      "padding": "5px",
      "width": "20px",
    }
  }>
  <div
    style={
      Object {
        "backgroundColor": undefined,
        "height": "100%",
        "width": "100%",
      }
    } />
</div>
`;

exports[`onClick`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "background": "#fff",
      "borderRadius": "1px",
      "boxShadow": "0 0 0 1px rgba(0,0,0,.1)",
      "cursor": "pointer",
      "display": "inline-block",
      "height": "20px",
      "padding": "5px",
      "width": "20px",
    }
  }>
  <div
    style={
      Object {
        "backgroundColor": "mediumvioletred",
        "height": "100%",
        "width": "100%",
      }
    } />
</div>
`;

exports[`size 50`] = `
<div
  onClick={undefined}
  style={
    Object {
      "background": "#fff",
      "borderRadius": "1px",
      "boxShadow": "0 0 0 1px rgba(0,0,0,.1)",
      "cursor": "pointer",
      "display": "inline-block",
      "height": "50px",
      "padding": "5px",
      "width": "50px",
    }
  }>
  <div
    style={
      Object {
        "backgroundColor": "coral",
        "height": "100%",
        "width": "100%",
      }
    } />
</div>
`;

exports[`yellowgreen`] = `
<div
  onClick={undefined}
  style={
    Object {
      "background": "#fff",
      "borderRadius": "1px",
      "boxShadow": "0 0 0 1px rgba(0,0,0,.1)",
      "cursor": "pointer",
      "display": "inline-block",
      "height": "20px",
      "padding": "5px",
      "width": "20px",
    }
  }>
  <div
    style={
      Object {
        "backgroundColor": "yellowgreen",
        "height": "100%",
        "width": "100%",
      }
    } />
</div>
`;
